<resources>
    <string name="app_name">TecGurusApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tec Gurus</string>
    <string name="nav_header_subtitle">www.tecgurus.net</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tec_gurus">Tec Gurus</string>
    <string name="general_string_home">Home</string>
    <string name="general_string_eliminar">Eliminar</string>
    <string name="general_string_modificar">Modificar</string>
    <string name="general_string_contacts">Contactos</string>
    <string name="general_string_username">Username</string>
    <string name="general_string_password">Password</string>
    <string name="general_string_nombre">Nombre</string>
    <string name="general_string_apellido">Apellido</string>
    <string name="general_string_direccion">Direccion</string>
    <string name="general_string_agregar">Agregar</string>
    <string name="delete_user_instructions">Escribe el username del usuario</string>
    <string name="general_string_buscar">Buscar</string>
    <string name="general_string_confirmar_password">Confirmar password</string>
    <string name="the_username_not_exists">El usuario %s no existe.</string>
    <string name="user_updated_success">El usuario %s ha sido actualizado con exito.</string>
    <string name="user_deleted_success">El usuario %s ha sido eliminado con exito.</string>

    <string name="error_field_requiered">*Campo requerido</string>
    <string name="error_incorrect_confirmation">Los campos no coinciden</string>
    <string name="user_saved_success">Usuario guardado satisfactoriamente!</string>

    <string name="data_base_table_user" translatable="false">CREATE TABLE IF NOT EXISTS user(username TEXT PRIMARY KEY, password TEXT, name TEXT, last_name TEXT, address TEXT)</string>
    <string name="registers_not_found">No existen registros aun.</string>
    <string name="title_activity_maps">Map</string>
    <string name="get_information_text">Obtener Informacion</string>
    <string name="version_info">Informacion de la version:</string>
    <string name="map_text">Map</string>
    <string name="web_services_text">Web Services</string>
    <string name="info_getted">Informacion obtenida</string>
    <string name="no_data_found">No se encontro información</string>
    <string name="bad_internet_connection">Revisa tu conexión a internet</string>
    <string name="invalid_params">Inserta un codigo valido</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_title">Reloj Tec Gurus</string>
    <string name="address_tec_gurus">Direccion tec gurus</string>

</resources>
