<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activities.WebServices">

    <Button
        android:id="@+id/activity_soap_service_button"
        android:text="@string/get_information_text"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="16dp"
        android:text="@string/version_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="16dp"
        android:id="@+id/activity_soap_service_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:background="#AFAFAFAF"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <EditText
        android:id="@+id/activity_soap_service_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/activity_soap_service_button_rest"
        android:text="@string/get_information_text"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="16dp"
        android:text="@string/info_getted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_margin="16dp"
            android:id="@+id/activity_soap_service_result_rest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>